# otus-cpp-basics

./: .gitignore  CMakeLists.txt  README.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  serialContainer.cpp  serialContainer.h  statistics.cpp
include/: add.h  astnode.hpp  div.h  mul.h  number.hpp  parser.hpp  sub.h  variable.h
src/: CMakeLists.txt  main.cpp  parser.cpp
src/Include/: CMakeLists.txt  max.h  mean.h  min.h  statistics.h  std.h
src/Source/: CMakeLists.txt  main.cpp  max.cpp  mean.cpp  min.cpp  std.cpp
